[tool.poetry]
name = "denseformer"
version = "0.1.0"
description = "Package containing a DWA module which can be used to implement a DenseFormer with dilation and DWA period."
license = "Apache"
readme = "README.md"
authors = [
    "Matteo Pagliardini <matteo.pagliardini@epfl.ch>",
    "Amirkeivan Mohtashami <amirkeivan.mohtashami@epfl.ch>",
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
